--- a/notebooks/Feature_Selection_and_classification.ipynb
+++ b/notebooks/Feature_Selection_and_classification.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "93a06238",
    "metadata": {
     "id": "93a06238",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "b1d3a48e",
    "metadata": {
     "id": "b1d3a48e"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "7659f077",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "2de9e39b",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "c6eec8ab",
    "metadata": {},
    "outputs": [
@@ -210,11 +210,11 @@
      "output_type": "stream",
      "text": [
       "---- score for --- Random Forest ----\n",
-      "0.9620535714285714\n",
+      "0.96875\n",
       "---- score for --- Decision Tree ----\n",
-      "0.9419642857142857\n",
+      "0.9441964285714286\n",
       "---- score for --- Gradient Boosting ----\n",
-      "0.9732142857142857\n",
+      "0.9642857142857143\n",
       "---- score for --- Logistic Regression ----\n",
       "0.8816964285714286\n",
       "---- score for --- K-Neighbors Classifier ----\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "25c80379",
    "metadata": {
     "scrolled": true
@@ -278,7 +278,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.941964</td>\n",
+       "      <td>0.944196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -286,9 +286,9 @@
        "      <td>0.944196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Random Forest</td>\n",
-       "      <td>0.962054</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Gradient Boosting</td>\n",
+       "      <td>0.964286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -296,9 +296,9 @@
        "      <td>0.966518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Gradient Boosting</td>\n",
-       "      <td>0.973214</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.968750</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -308,14 +308,14 @@
        "               Model_name     Score\n",
        "4  K-Neighbors Classifier  0.821429\n",
        "3     Logistic Regression  0.881696\n",
-       "1           Decision Tree  0.941964\n",
+       "1           Decision Tree  0.944196\n",
        "6     AdaBoost Classifier  0.944196\n",
-       "0           Random Forest  0.962054\n",
+       "2       Gradient Boosting  0.964286\n",
        "5           XGBClassifier  0.966518\n",
-       "2       Gradient Boosting  0.973214"
+       "0           Random Forest  0.968750"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "130fe7f4",
    "metadata": {
     "id": "130fe7f4",
@@ -725,7 +725,7 @@
        "[1568 rows x 21 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "2937ae66",
    "metadata": {},
    "outputs": [],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "e8fe3684",
    "metadata": {
     "id": "e8fe3684",
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "78ddb30e",
    "metadata": {
     "id": "78ddb30e",
@@ -881,10 +881,10 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1c00ede43d0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x209600f7730>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "b6ae90a0",
    "metadata": {},
    "outputs": [
