--- a/notebooks/mongodbupload.ipynb
+++ b/notebooks/mongodbupload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3de69f9f-8ee7-42ef-8840-0b0b02501c27",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
     "\n",
     "# ✅ MongoDB Connection Details\n",
     "MONGO_DB_URL = \"mongodb+srv://simranskills:mongodbpwskills@cluster0.w8hdb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
-    "DATABASE_NAME = \"ineuron\"\n",
+    "DATABASE_NAME = \"db1\"\n",
     "DATASETS_DIR = r\"D:\\Customer-Categorizer-1\\notebooks\"\n",
     "\n",
     "# ✅ Establish MongoDB Connection\n",
