--- a/notebooks/mongodbupload.ipynb
+++ b/notebooks/mongodbupload.ipynb
@@ -26,7 +26,7 @@
     "ca = certifi.where()\n",
     "\n",
     "# ✅ MongoDB Connection Details\n",
-    "MONGO_DB_URL = \"mongodb+srv://simranskills:mongodbpwskills@cluster0.w8hdb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "MONGO_DB_URL = \"mongodb+srv://simranskills:<password>@cluster0.w8hdb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
     "DATABASE_NAME = \"db1\"\n",
     "DATASETS_DIR = r\"D:\\Customer-Categorizer-1\\notebooks\"\n",
     "\n",
